// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders correctly 1`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  />
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="񹇁򆙳"
  />
</label>
`;

exports[`TextArea renders correctly 2`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    /򫘍𘅮񆐭
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="󲸽r"
  />
</label>
`;

exports[`TextArea renders correctly 3`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  />
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder=""
  />
</label>
`;

exports[`TextArea renders correctly 4`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  />
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="񜩢"
  />
</label>
`;

exports[`TextArea renders correctly 5`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    􏿼
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="񧽋㋔񍂶򑳲"
  />
</label>
`;

exports[`TextArea renders correctly 6`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    娱񹮗𛗃𳟁
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="񆠟"
  />
</label>
`;

exports[`TextArea renders correctly 7`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  />
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="valueOf"
  />
</label>
`;

exports[`TextArea renders correctly 8`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  />
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="l"
  />
</label>
`;

exports[`TextArea renders correctly 9`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  />
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="򭮀񯧠򷉄򚣙򜜼󷒛񊂳"
  />
</label>
`;

exports[`TextArea renders correctly 10`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    "
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="괫󂟥񪽿񷄎񃶟𺸬𩢍"
  />
</label>
`;

exports[`TextArea renders correctly 11`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  />
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="𮙊񢛬󯨦򷗸󺳍𚡆𤶮򉸋"
  />
</label>
`;

exports[`TextArea renders correctly 12`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    __proto__
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="󒸺𩿥񌇉笉󳖷񴥶򡀴󘥄𝹑"
  />
</label>
`;

exports[`TextArea renders correctly 13`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    񈯾
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="󐶻Ի󢙟򛪰󇍨"
  />
</label>
`;

exports[`TextArea renders correctly 14`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    argumentsr
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="󤈍􏿺"
  />
</label>
`;

exports[`TextArea renders correctly 15`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    򭺩󄌄󺨚󁒲󬁀񠩹ㄝ󚛈򃋮󇉠
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="𽏵󿃂􏿺𺃎"
  />
</label>
`;

exports[`TextArea renders correctly 16`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    ﳽ򔬞󯦱򿯑𷍘򘃵򷥹򏸍󂒏󗰟
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder=""
  />
</label>
`;

exports[`TextArea renders correctly 17`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    $􏿷
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="񋽢򸗭񥕆􂶛󌤋"
  />
</label>
`;

exports[`TextArea renders correctly 18`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    񣧺򧕾𓞆󷣄𴚏񮋟𙽮򳭆
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="񁸴󌓍'񡩧􉌲򔭋􆓀񺍎񅇡"
  />
</label>
`;

exports[`TextArea renders correctly 19`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    󫂄񂺛
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="􏿸"
  />
</label>
`;

exports[`TextArea renders correctly 20`] = `
<label
  className="css-1k6lc2c"
>
  <div
    className="css-1wds400"
  >
    󕚱󤐀𔖢󾲳򯀯󒟽򾄢􃄂񂑟򡝴
  </div>
  <textarea
    className="css-w13f35"
    name="comments"
    placeholder="򊞄􌽑򷔫󄱗𸝩􇡫􎶊𯴏"
  />
</label>
`;
